WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310520
Unreviewed, fix 'isPremptable' typo in Threading.h
https://bugs.webkit.org/show_bug.cgi?id=310520
Summary
Unreviewed, fix 'isPremptable' typo in Threading.h
Chris Dumez
Reported
2026-03-23 00:47:13 PDT
Fix 'isPremptable' typo in Threading.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-23 00:47:23 PDT
<
rdar://problem/173134367
>
Chris Dumez
Comment 2
2026-03-23 00:51:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61151
EWS
Comment 3
2026-03-23 01:57:28 PDT
Committed
309741@main
(cf7a2d58b7cc): <
https://commits.webkit.org/309741@main
> Reviewed commits have been landed. Closing PR #61151 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug