Unreviewed, fix 'isPremptable' typo in Threading.h https://bugs.webkit.org/show_bug.cgi?id=310520 rdar://173134367

* Source/WTF/wtf/Threading.h:
* Source/WTF/wtf/posix/ThreadingPOSIX.cpp:
(WTF::Thread::setThreadTimeConstraints):

Canonical link: https://commits.webkit.org/309741@main