Source/WTF/wtf/Threading.h
@@ -236,7 +236,7 @@ public:
 #if HAVE(THREAD_TIME_CONSTRAINTS)
     // Set thread timing constraints, which allows the scheduler to demote
     // threads which exceed their own reported constraints.
-    WTF_EXPORT_PRIVATE void setThreadTimeConstraints(MonotonicTime period, MonotonicTime nominalComputation, MonotonicTime constraint, bool isPremptable);
+    WTF_EXPORT_PRIVATE void setThreadTimeConstraints(MonotonicTime period, MonotonicTime nominalComputation, MonotonicTime constraint, bool isPreemptable);
 #endif
 
     // Called in the thread during initialization.
